добавляет исправления ДЗ№4

--- a/index.html
+++ b/index.html
@@ -147,28 +147,36 @@
               <div class="cart_text">
                 <h3 class="name">Игорь Демьяненко</h3>
                 <p class="prof">Product Designer</p>
-                <div class="pers_sociallink">
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="pers_sociallink">
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -176,28 +184,36 @@
               <div class="cart_text">
                 <h3 class="name">Ольга Репина</h3>
                 <p class="prof">Frontend Developer</p>
-                <div class="pers_sociallink">
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="pers_sociallink">
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -205,28 +221,36 @@
               <div class="cart_text">
                 <h3 class="name">Николай Тарасов</h3>
                 <p class="prof">Marketing</p>
-                <div class="pers_sociallink">
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="pers_sociallink">
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -234,28 +258,36 @@
               <div class="cart_text">
                 <h3 class="name">Михаил Ермаков</h3>
                 <p class="prof">UI Designer</p>
-                <div class="pers_sociallink">
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a class="sociallink" href="#">
-                    <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
-                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="pers_sociallink">
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="sociallink" href="#">
+                      <svg class="icon-social" width="20" height="20" viewBox="0 0 20 20">
+                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -268,38 +300,38 @@
           <ul class="client_list">
             <li class="client_item">
               <a class="client_link" href="#"
-                ><svg class="client_icon" width="41" height="46.7">
+                ><svg class="client_icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
             <li class="client_item">
               <a class="client_link" href=""
-                ><svg class="client_icon" width="40" height="52">
+                ><svg class="client_icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-client2"></use></svg
               ></a>
             </li>
             <li class="client_item">
               <a class="client_link" href=""
-                ><svg class="client_icon" width="43.46" height="41.18">
+                ><svg class="client_icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-client3"></use></svg
               ></a>
             </li>
             <li class="client_item">
               <a class="client_link" href=""
-                ><svg class="client_icon" width="84.44" height="40.62">
+                ><svg class="client_icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-client4"></use></svg
               ></a>
             </li>
             <li class="client_item">
               <a class="client_link" href=""
-                ><svg class="client_icon" width="62.54" height="45.43">
+                ><svg class="client_icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-client5"></use></svg
               ></a>
             </li>
             <li class="client_item">
               <a class="client_link" href=""
-                ><svg class="client_icon" width="93.79" height="43.93">
+                ><svg class="client_icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-client6"></use></svg
               ></a>
             </li>
