--- a/portfolio.html
+++ b/portfolio.html
@@ -160,55 +160,53 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
-        <div class="footer_box">
-          <div class="item">
-            <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
-            <address class="address">
-              <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
-              <ul class="list">
-                <li class="footer_contact">
-                  <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-                </li>
-                <li class="footer_contact">
-                  <a href="tel:+380961111111" class="link">+380961111111</a>
-                </li>
-              </ul>
-            </address>
-          </div>
-          <div class="item">
-            <p class="ftr_text">ПРИСОЕДЕНЯЙТЕСЬ</p>
-            <ul class="ftr_soclist">
-              <li class="ftr_item">
-                <a class="ftr_sociallink" href="#">
-                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                  </svg>
-                </a>
+      <div class="container footer_box">
+        <div class="item">
+          <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
+          <address class="address">
+            <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="list">
+              <li class="footer_contact">
+                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
               </li>
-              <li class="ftr_item">
-                <a class="ftr_sociallink" href="#">
-                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="ftr_item">
-                <a class="ftr_sociallink" href="#">
-                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="ftr_item">
-                <a class="ftr_sociallink" href="#">
-                  <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
+              <li class="footer_contact">
+                <a href="tel:+380961111111" class="link">+380961111111</a>
               </li>
             </ul>
-          </div>
+          </address>
+        </div>
+        <div class="item">
+          <p class="ftr_text">ПРИСОЕДЕНЯЙТЕСЬ</p>
+          <ul class="ftr_soclist">
+            <li class="ftr_item">
+              <a class="ftr_sociallink" href="#">
+                <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="ftr_item">
+              <a class="ftr_sociallink" href="#">
+                <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="ftr_item">
+              <a class="ftr_sociallink" href="#">
+                <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="ftr_item">
+              <a class="ftr_sociallink" href="#">
+                <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
