Добавляет исправления ДЗ№4 #2

--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container footer_box">
-        <div class="item">
+        <div class="item ftr_address">
           <a href="index.html" class="logo">Web<span class="logo_footer">Studio</span></a>
           <address class="address">
             <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
