--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
                 <a href="./index.html" class="link">Студия</a>
               </li>
               <li class="item">
-                <a href="./portfolio.html" class="link accent_nav">Портфолио</a>
+                <a href="./portfolio.html" class="link accent_nav liner">Портфолио</a>
               </li>
               <li class="item">
                 <a href="#" class="link">Контакты</a>
@@ -75,7 +75,10 @@
           <ul class="pf_list">
             <li class="pf_cart">
               <a href="#" class="pf_link">
-                <img src="./images/pf-img1.jpg" alt="" width="370" />
+                <div class="product_thumb">
+                  <img src="./images/pf-img1.jpg" alt="" width="370" />
+                </div>
+
                 <div class="cart_text">
                   <h2 class="name">Технокряк</h2>
                   <p class="products">Веб-сайт</p>
@@ -84,7 +87,9 @@
             </li>
             <li class="pf_cart">
               <a href="#" class="pf_link">
-                <img src="./images/pf-img2.jpg" alt="" width="370" />
+                <div class="product_thumb">
+                  <img src="./images/pf-img2.jpg" alt="" width="370" />
+                </div>
                 <div class="cart_text">
                   <h2 class="name">Постер New Orlean vs Golden Star</h2>
                   <p class="products">Дизайн</p>
@@ -93,7 +98,9 @@
             </li>
             <li class="pf_cart">
               <a href="#" class="pf_link">
-                <img src="./images/pf-img3.jpg" alt="" width="370" />
+                <div class="product_thumb">
+                  <img src="./images/pf-img3.jpg" alt="" width="370" />
+                </div>
                 <div class="cart_text">
                   <h2 class="name">Ресторан Seafood</h2>
                   <p class="products">Приложение</p>
@@ -102,7 +109,9 @@
             </li>
             <li class="pf_cart">
               <a href="#" class="pf_link">
-                <img src="./images/pf-img4.jpg" alt="" width="370" />
+                <div class="product_thumb">
+                  <img src="./images/pf-img4.jpg" alt="" width="370" />
+                </div>
                 <div class="cart_text">
                   <h2 class="name">Проект Prime</h2>
                   <p class="products">Маркетинг</p>
@@ -111,7 +120,9 @@
             </li>
             <li class="pf_cart">
               <a href="#" class="pf_link">
-                <img src="./images/pf-img5.jpg" alt="" width="370" />
+                <div class="product_thumb">
+                  <img src="./images/pf-img5.jpg" alt="" width="370" />
+                </div>
                 <div class="cart_text">
                   <h2 class="name">Проект Boxes</h2>
                   <p class="products">Приложение</p>
@@ -120,7 +131,9 @@
             </li>
             <li class="pf_cart">
               <a href="#" class="pf_link">
-                <img src="./images/pf-img6.jpg" alt="" width="370" />
+                <div class="product_thumb">
+                  <img src="./images/pf-img6.jpg" alt="" width="370" />
+                </div>
                 <div class="cart_text">
                   <h2 class="name">Inspiration has no Borders</h2>
                   <p class="products">Веб-сайт</p>
@@ -129,7 +142,9 @@
             </li>
             <li class="pf_cart">
               <a href="#" class="pf_link">
-                <img src="./images/pf-img7.jpg" alt="" width="370" />
+                <div class="product_thumb">
+                  <img src="./images/pf-img7.jpg" alt="" width="370" />
+                </div>
                 <div class="cart_text">
                   <h2 class="name">Издание Limited Edition</h2>
                   <p class="products">Дизайн</p>
@@ -138,7 +153,9 @@
             </li>
             <li class="pf_cart">
               <a href="#" class="pf_link">
-                <img src="./images/pf-img8.jpg" alt="" width="370" />
+                <div class="product_thumb">
+                  <img src="./images/pf-img8.jpg" alt="" width="370" />
+                </div>
                 <div class="cart_text">
                   <h2 class="name">Проект LAB</h2>
                   <p class="products">Маркетинг</p>
@@ -147,7 +164,9 @@
             </li>
             <li class="pf_cart">
               <a href="#" class="pf_link">
-                <img src="./images/pf-img9.jpg" alt="" width="370" />
+                <div class="product_thumb">
+                  <img src="./images/pf-img9.jpg" alt="" width="370" />
+                </div>
                 <div class="cart_text">
                   <h2 class="name">Growing Business</h2>
                   <p class="products">Приложение</p>
