Добавляет overlay в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,6 +76,7 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
+                  <div class="product_overlay"></div>
                   <img src="./images/pf-img1.jpg" alt="" width="370" />
                 </div>
 
@@ -88,6 +89,7 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
+                  <div class="product_overlay"></div>
                   <img src="./images/pf-img2.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -99,6 +101,7 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
+                  <div class="product_overlay"></div>
                   <img src="./images/pf-img3.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -110,6 +113,7 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
+                  <div class="product_overlay"></div>
                   <img src="./images/pf-img4.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -121,6 +125,7 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
+                  <div class="product_overlay"></div>
                   <img src="./images/pf-img5.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -132,6 +137,7 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
+                  <div class="product_overlay"></div>
                   <img src="./images/pf-img6.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -143,6 +149,7 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
+                  <div class="product_overlay"></div>
                   <img src="./images/pf-img7.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -154,6 +161,7 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
+                  <div class="product_overlay"></div>
                   <img src="./images/pf-img8.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -165,6 +173,7 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
+                  <div class="product_overlay"></div>
                   <img src="./images/pf-img9.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
