--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,13 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
-                  <div class="product_overlay"></div>
+                  <div class="product_overlay">
+                    <p class="text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
+                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
+                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                    </p>
+                  </div>
                   <img src="./images/pf-img1.jpg" alt="" width="370" />
                 </div>
 
@@ -89,7 +95,13 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
-                  <div class="product_overlay"></div>
+                  <div class="product_overlay">
+                    <p class="text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
+                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
+                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                    </p>
+                  </div>
                   <img src="./images/pf-img2.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -101,7 +113,13 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
-                  <div class="product_overlay"></div>
+                  <div class="product_overlay">
+                    <p class="text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
+                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
+                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                    </p>
+                  </div>
                   <img src="./images/pf-img3.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -113,7 +131,13 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
-                  <div class="product_overlay"></div>
+                  <div class="product_overlay">
+                    <p class="text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
+                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
+                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                    </p>
+                  </div>
                   <img src="./images/pf-img4.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -125,7 +149,13 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
-                  <div class="product_overlay"></div>
+                  <div class="product_overlay">
+                    <p class="text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
+                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
+                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                    </p>
+                  </div>
                   <img src="./images/pf-img5.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -137,7 +167,13 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
-                  <div class="product_overlay"></div>
+                  <div class="product_overlay">
+                    <p class="text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
+                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
+                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                    </p>
+                  </div>
                   <img src="./images/pf-img6.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -149,7 +185,13 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
-                  <div class="product_overlay"></div>
+                  <div class="product_overlay">
+                    <p class="text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
+                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
+                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                    </p>
+                  </div>
                   <img src="./images/pf-img7.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -161,7 +203,13 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
-                  <div class="product_overlay"></div>
+                  <div class="product_overlay">
+                    <p class="text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
+                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
+                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                    </p>
+                  </div>
                   <img src="./images/pf-img8.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
@@ -173,7 +221,13 @@
             <li class="pf_cart">
               <a href="#" class="pf_link">
                 <div class="product_thumb">
-                  <div class="product_overlay"></div>
+                  <div class="product_overlay">
+                    <p class="text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
+                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
+                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                    </p>
+                  </div>
                   <img src="./images/pf-img9.jpg" alt="" width="370" />
                 </div>
                 <div class="cart_text">
