--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="site-nav">
           <ul class="header_nav">
             <li class="item">
-              <a href="./index.html" class="link accent_nav liner">Студия</a>
+              <a href="./index.html" class="link liner">Студия</a>
             </li>
             <li class="item">
               <a href="./portfolio.html" class="link">Портфолио</a>
@@ -69,12 +69,11 @@
           <!-- -----------Backdrop------------------- -->
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea doloribus, ipsam
-                dignissimos reprehenderit laborum distinctio obcaecati nisi architecto sint dolorum
-                consequuntur atque expedita molestias accusamus minima accusantium fuga qui dolore.
-              </p>
-              <button type="button" data-modal-close>Закрыть</button>
+              <button type="button" data-modal-close class="btn-close">
+                <svg class="icon-close" width="30" height="30">
+                  <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+              </button>
             </div>
           </div>
         </div>
