--- a/portfolio.html
+++ b/portfolio.html
@@ -78,9 +78,8 @@
                 <div class="product_thumb">
                   <div class="product_overlay">
                     <p class="text">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
-                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
-                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                      По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
+                      который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img1.jpg" alt="" width="370" />
@@ -97,9 +96,8 @@
                 <div class="product_thumb">
                   <div class="product_overlay">
                     <p class="text">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
-                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
-                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                      По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
+                      который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img2.jpg" alt="" width="370" />
@@ -115,9 +113,8 @@
                 <div class="product_thumb">
                   <div class="product_overlay">
                     <p class="text">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
-                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
-                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                      По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
+                      который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img3.jpg" alt="" width="370" />
@@ -133,9 +130,8 @@
                 <div class="product_thumb">
                   <div class="product_overlay">
                     <p class="text">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
-                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
-                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                      По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
+                      который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img4.jpg" alt="" width="370" />
@@ -151,9 +147,8 @@
                 <div class="product_thumb">
                   <div class="product_overlay">
                     <p class="text">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
-                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
-                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                      По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
+                      который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img5.jpg" alt="" width="370" />
@@ -169,9 +164,8 @@
                 <div class="product_thumb">
                   <div class="product_overlay">
                     <p class="text">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
-                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
-                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                      По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
+                      который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img6.jpg" alt="" width="370" />
@@ -187,9 +181,8 @@
                 <div class="product_thumb">
                   <div class="product_overlay">
                     <p class="text">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
-                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
-                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                      По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
+                      который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img7.jpg" alt="" width="370" />
@@ -205,9 +198,8 @@
                 <div class="product_thumb">
                   <div class="product_overlay">
                     <p class="text">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
-                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
-                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                      По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
+                      который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img8.jpg" alt="" width="370" />
@@ -223,9 +215,8 @@
                 <div class="product_thumb">
                   <div class="product_overlay">
                     <p class="text">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus blanditiis
-                      quibusdam officiis sit, alias eum dolores aspernatur exercitationem architecto
-                      harum inventore modi tempore sapiente ab sequi, incidunt quod cumque dolorum.
+                      По своей сути рыбатекст является альтернативой традиционному lorem ipsum,
+                      который вызывает у некторых людей недоумение при попытках прочитать рыбу текст
                     </p>
                   </div>
                   <img src="./images/pf-img9.jpg" alt="" width="370" />
