--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="site-nav">
           <ul class="header_nav">
             <li class="item">
-              <a href="./index.html" class="link liner">Студия</a>
+              <a href="./index.html" class="link accent_nav liner">Студия</a>
             </li>
             <li class="item">
               <a href="./portfolio.html" class="link">Портфолио</a>
