--- a/index.html
+++ b/index.html
@@ -74,6 +74,49 @@
                   <use href="./images/icons.svg#icon-close"></use>
                 </svg>
               </button>
+              <h2 class="modal_tittle">Оставьте свои данные, мы вам перезвоним</h2>
+              <form action="" class="order_form">
+                <div class="form_input">
+                  <label for="name">Имя</label>
+                  <input type="text" name="name" id="name" />
+                  <svg class="form-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-person_form"></use>
+                  </svg>
+                </div>
+                <div class="form_input">
+                  <label for="tel">Телефон</label>
+                  <input type="tel" name="tel" id="tel" />
+                  <svg class="form-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-phone_form"></use>
+                  </svg>
+                </div>
+                <div class="form_input">
+                  <label for="email">Почта</label>
+                  <input type="email" name="email" id="email" />
+                  <svg class="form-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-email_form"></use>
+                  </svg>
+                </div>
+                <div class="form_comment">
+                  <label for="comment">Комментарий</label>
+                  <textarea
+                    name="comment"
+                    id="comment"
+                    rows="10"
+                    placeholder="Введите текст"
+                  ></textarea>
+                </div>
+
+                <div class="order_checkbox">
+                  <input type="checkbox" name="order_check" id="order_check" />
+                  <label for="order_check"
+                    >Соглашаюсь с рассылкой и ипринимаю<a href="">Условия договора</a>
+                  </label>
+                </div>
+                <div class="order_btnbox">
+                  <button type="submit" class="order_btn">Отправить</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
