--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <ul class="contact_list">
           <li class="item">
             <a href="mailto:info@devstudio.com" class="link"
-              ><svg class="icon-mail" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-mail"></use></svg
+              ><svg class="icon-mail" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-send"></use></svg
               >info@devstudio.com</a
             >
           </li>
@@ -76,30 +76,30 @@
               </button>
               <h2 class="modal_tittle">Оставьте свои данные, мы вам перезвоним</h2>
               <form action="" class="order_form">
-                <div class="form_input">
+                <div class="box_input">
                   <label for="name">Имя</label>
-                  <input type="text" name="name" id="name" />
+                  <input class="form_input" type="text" name="name" id="name" />
                   <svg class="form-icon" width="18" height="18">
                     <use href="./images/icons.svg#icon-person_form"></use>
                   </svg>
                 </div>
-                <div class="form_input">
+                <div class="box_input">
                   <label for="tel">Телефон</label>
-                  <input type="tel" name="tel" id="tel" />
+                  <input class="form_input" type="tel" name="tel" id="tel" />
                   <svg class="form-icon" width="18" height="18">
                     <use href="./images/icons.svg#icon-phone_form"></use>
                   </svg>
                 </div>
-                <div class="form_input">
+                <div class="box_input">
                   <label for="email">Почта</label>
-                  <input type="email" name="email" id="email" />
+                  <input class="form_input" type="email" name="email" id="email" />
                   <svg class="form-icon" width="18" height="18">
                     <use href="./images/icons.svg#icon-email_form"></use>
                   </svg>
                 </div>
-                <div class="form_comment">
+                <div class="box_input">
                   <label for="comment">Комментарий</label>
-                  <textarea
+                  <textarea  class="form_comment"
                     name="comment"
                     id="comment"
                     rows="10"
@@ -424,32 +424,42 @@
             <li class="ftr_item">
               <a class="ftr_sociallink" href="#">
                 <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="ftr_item">
               <a class="ftr_sociallink" href="#">
                 <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="ftr_item">
               <a class="ftr_sociallink" href="#">
                 <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="ftr_item">
               <a class="ftr_sociallink" href="#">
                 <svg class="ftr_socicon" width="20" height="20" viewBox="0 0 20 20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
+        </div>
+        <div class="item ftr_inmail">
+          <p class="ftr_text">Подпишитесь на рассылку</p>
+          <form action="" class="ftr_form">
+            <input class="ftr_input" type="text" />
+            <button type="submit" class="ftr_inpbtn">Подписаться<svg class="ftr_btnsend" width="24" height="24" viewBox="0 0 24 24">
+              <use href="./images/icons.svg#icon-send"></use></button>
+            
+            </svg>
+          </form>
         </div>
       </div>
     </footer>
