--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             для вашего бизнеса
           </h1>
           <button type="button" class="banner-btn" data-modal-open>Заказать услугу</button>
-          <!-- -----------Backdrop------------------- -->
+          <!-- Backdrop -->
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <button type="button" data-modal-close class="btn-close">
@@ -75,7 +75,7 @@
                 </svg>
               </button>
               <h2 class="modal_tittle">Оставьте свои данные, мы вам перезвоним</h2>
-              <form action="" class="order_form">
+              <form class="order_form">
                 <div class="box_input">
                   <label for="name">Имя</label>
                   <input class="form_input" type="text" name="name" id="name" />
@@ -99,16 +99,17 @@
                 </div>
                 <div class="box_input">
                   <label for="comment">Комментарий</label>
-                  <textarea  class="form_comment"
+                  <textarea
+                    class="form_comment"
                     name="comment"
                     id="comment"
                     rows="10"
                     placeholder="Введите текст"
                   ></textarea>
-                </div> 
-              
+                </div>
+
                 <label class="order_check">
-                  <input class="inp_checkbox" type="checkbox"/>
+                  <input class="inp_checkbox" type="checkbox" />
                   <span class="icon_checkbox"></span>
                   Соглашаюсь с рассылкой и ипринимаю <a class="link" href="#">Условия договора</a>
                 </label>
@@ -450,12 +451,13 @@
         </div>
         <div class="item ftr_inmail">
           <p class="ftr_text">Подпишитесь на рассылку</p>
-          <form  class="ftr_form">
-            <input class="ftr_input" type="text" placeholder="E-mail"/>
-            <button type="submit" class="ftr_inpbtn">Подписаться<svg class="ftr_btnsend" width="24" height="24" viewBox="0 0 24 24">
-              <use href="./images/icons.svg#icon-send"></use></button>
-            
-            </svg>
+          <form class="ftr_form">
+            <input class="ftr_input" type="text" placeholder="E-mail" />
+            <button type="submit" class="ftr_inpbtn">
+              Подписаться<svg class="ftr_btnsend" width="24" height="24" viewBox="0 0 24 24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
