--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
           <li class="item">
             <a href="mailto:info@devstudio.com" class="link"
               ><svg class="icon-mail" width="24" height="24">
-                <use href="./images/symbol-defs.svg#icon-send"></use></svg
+                <use href="./images/icons.svg#icon-mail"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="link"
               ><svg class="icon-phone" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-phone"></use></svg
+                <use href="./images/icons.svg#icon-phone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
